--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,19 @@
 {
-    "builds": [
-        {
-            "src": "bookmyseat/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "Python 3.11.0"
-            }
-        }
-    ],
+    "builds": [{
+        "src": "bookmyseat/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+    },
+    {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "staticfiles_build" }
+    }],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "bookmyseat/wsgi.py"
